sandbox/output
GildedRoseTest.java:103: error: cannot find symbol
                GildedRose.GildedRose.isAgedBrie(), 
                          ^
  symbol:   variable GildedRose
  location: class GildedRose
1 error
